DeleteCustomerProductHandler added
